--- a/src/shared-components/Header/style.css
+++ b/src/shared-components/Header/style.css
@@ -28,7 +28,7 @@
 }
 
 #root #main-header .container .logo_container {
-  display: inline-block;
+  display: block;
   height: 72%;
 }
 
@@ -129,6 +129,10 @@
   height: 54px;
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
+}
+
+#root .fixedH #main-header .container .logo_container {
+  height: 50px;
 }
 
 @media screen and (max-width: 1023px) {
