--- a/src/shared-components/Header/style.scss
+++ b/src/shared-components/Header/style.scss
@@ -20,7 +20,7 @@
       -moz-transition: 0.4s ease-in-out;
       transition: 0.4s ease-in-out;
       .logo_container {
-        display: inline-block;
+        display: block;
         height: 72%;
         #logo {
           display: inline-block;
@@ -127,6 +127,9 @@
         -webkit-transition: 0.4s ease-in-out;
         -moz-transition: 0.4s ease-in-out;
         transition: 0.4s ease-in-out;
+        .logo_container {
+          height: 50px;
+        }
       }
     }
   }
