--- a/src/components/Design/style.css
+++ b/src/components/Design/style.css
@@ -1,2 +1,325 @@
-.mainC .design .main-content__top{background-image:url(../../assets/images/designBanner.jpg);background-position:center;background-size:100%;background-size:cover}.design .addShadow{background-color:#0000008c}.mainC .main-content{margin-top:97px}.mainC .main-content__top .header-content{padding:5px 0px}.mainC .main-content__top__title{padding:60px 0;font-weight:700;font-size:25px;color:var(--mainActiveText);-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig;-webkit-animation-duration:900ms;animation-duration:900ms;-webkit-animation-fill-mode:both;animation-fill-mode:both}.mainC .main-content__top__title .description{font-size:14px;padding-bottom:10px !important;padding-top:5px !important;font-weight:500;-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft;-webkit-animation-duration:1s;animation-duration:1s}.mainC .main-content .description{padding:15px 0}.mainC .main-content .description__row{padding:15px 0;display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-animation-name:fadeInUp;animation-name:fadeInUp;-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}.mainC .main-content .description__row:nth-child(3){padding-top:25px}.mainC .main-content .description__row p{font-size:13px;padding:0px 10px;transition:all 250ms ease-in-out 0s;-webkit-transition:all 250ms ease-in-out 0s}.mainC .main-content .description__row .testimonial{overflow:initial;background-color:var(--mainActiveBacground);padding:30px;position:relative;width:100%}.mainC .main-content .description__row .testimonial:after{position:absolute;z-index:2;top:-16px;left:50%;margin-left:-16px;border-radius:31px;background:#f5f5f5;font-size:32px;content:"\7c";text-shadow:0 0;font-family:ETmodules !important;font-weight:400;font-style:normal;font-variant:normal;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;line-height:1;text-transform:none;speak:none;color:var(--mainActiveBacground)}.mainC .main-content .description__row .testimonial h3{color:var(--mainActiveText);font-size:22px}.mainC .main-content .description__row .testimonial p{color:var(--mainActiveText)}.mainC .main-content .description__row h3{font-size:16px;margin-bottom:0;text-align:center;padding:15px 10px;color:var(--mainActiveBacground)}.mainC .main-content .description__row__col2{margin-right:5.5%;min-width:29.6%;width:-webkit-min-content;width:-moz-min-content;width:min-content;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-shadow:0px 6px 21px 0px #2d1c1c29;box-shadow:0px 6px 21px 0px #2d1c1c29;border-radius:8px;margin-bottom:5.5%;background-color:#f6f6f6}.mainC .main-content .description__row__col2:nth-child(3){margin-right:0}.mainC .main-content .description__row__col2 :last-child{margin-right:0}.mainC .main-content .description__row__col2 img{width:100%;border-top-left-radius:8px;border-top-right-radius:8px}.mainC .main-content .description__row .text-center{line-height:1.7em}.fixedH .main-content{margin-top:0}.main-content.design{position:relative}.main-content.design .addShadow{background-color:rgba(0,0,0,0.6)}.main-content.design:after{content:"";background-image:url(../../assets/images/backgroundI.jpg);background-position:center bottom;position:fixed;bottom:0px;width:100%;height:100%;z-index:-1;background-repeat:no-repeat;background-size:cover;opacity:0.10}@media screen and (max-width: 1023px){.mainC .main-content .description__row__col2{margin-right:0;min-width:100%;width:100%}}@-webkit-keyframes fadeInLeft{0%{opacity:0;-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInLeft{0%{opacity:0;-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInLeft{-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft}@-webkit-keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px, 0, 0);transform:translate3d(-2000px, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px, 0, 0);transform:translate3d(-2000px, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInLeftBig{-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig}@-webkit-keyframes fadeInRight{0%{opacity:0;-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes fadeInUp{0%{opacity:0;-webkit-transform:translate3d(0, 100%, 0);transform:translate3d(0, 100%, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInUp{0%{opacity:0;-webkit-transform:translate3d(0, 100%, 0);transform:translate3d(0, 100%, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInUp{-webkit-animation-name:fadeInUp;animation-name:fadeInUp}@-webkit-keyframes fadeInUpBig{0%{opacity:0;-webkit-transform:translate3d(0, 2000px, 0);transform:translate3d(0, 2000px, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInUpBig{0%{opacity:0;-webkit-transform:translate3d(0, 2000px, 0);transform:translate3d(0, 2000px, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}
+.mainC .design .main-content__top {
+  background-image: url(../../assets/images/designBanner.jpg);
+  background-position: center;
+  background-size: 100%;
+  background-size: cover;
+}
+
+.design .addShadow {
+  background-color: #0000008c;
+}
+
+.mainC .main-content {
+  margin-top: 97px;
+}
+
+.mainC .main-content__top .header-content {
+  padding: 5px 0px;
+}
+
+.mainC .main-content__top__title {
+  padding: 60px 0;
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--mainActiveText);
+  -webkit-animation-name: fadeInLeftBig;
+          animation-name: fadeInLeftBig;
+  -webkit-animation-duration: 900ms;
+  animation-duration: 900ms;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.mainC .main-content__top__title .description {
+  font-size: 14px;
+  padding-bottom: 10px !important;
+  padding-top: 5px !important;
+  font-weight: 500;
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.mainC .main-content .description {
+  padding: 15px 0;
+}
+
+.mainC .main-content .description__row {
+  padding: 15px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-animation-name: fadeInUp;
+          animation-name: fadeInUp;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.mainC .main-content .description__row:nth-child(3) {
+  padding-top: 25px;
+}
+
+.mainC .main-content .description__row p {
+  font-size: 13px;
+  padding: 0px 10px;
+  transition: all 250ms ease-in-out 0s;
+  -webkit-transition: all 250ms ease-in-out 0s;
+}
+
+.mainC .main-content .description__row .testimonial {
+  overflow: initial;
+  background-color: var(--mainActiveBacground);
+  padding: 30px;
+  position: relative;
+  width: 100%;
+}
+
+.mainC .main-content .description__row .testimonial:after {
+  position: absolute;
+  z-index: 2;
+  top: -16px;
+  left: 50%;
+  margin-left: -16px;
+  border-radius: 31px;
+  background: #f5f5f5;
+  font-size: 32px;
+  content: "\7c";
+  text-shadow: 0 0;
+  font-family: ETmodules !important;
+  font-weight: 400;
+  font-style: normal;
+  font-variant: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1;
+  text-transform: none;
+  speak: none;
+  color: var(--mainActiveBacground);
+}
+
+.mainC .main-content .description__row .testimonial h3 {
+  color: var(--mainActiveText);
+  font-size: 22px;
+}
+
+.mainC .main-content .description__row .testimonial p {
+  color: var(--mainActiveText);
+}
+
+.mainC .main-content .description__row h3 {
+  font-size: 16px;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 15px 10px;
+  color: var(--mainActiveBacground);
+}
+
+.mainC .main-content .description__row__col2 {
+  margin-right: 5.5%;
+  min-width: 29.6%;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 0px 6px 21px 0px #2d1c1c29;
+          box-shadow: 0px 6px 21px 0px #2d1c1c29;
+  border-radius: 8px;
+  margin-bottom: 5.5%;
+  background-color: #f6f6f6;
+}
+
+.mainC .main-content .description__row__col2:nth-child(3) {
+  margin-right: 0;
+}
+
+.mainC .main-content .description__row__col2 :last-child {
+  margin-right: 0;
+}
+
+.mainC .main-content .description__row__col2 img {
+  width: 100%;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.mainC .main-content .description__row .text-center {
+  line-height: 1.7em;
+}
+
+.fixedH .main-content {
+  margin-top: 0;
+}
+
+.main-content.design {
+  position: relative;
+}
+
+.main-content.design .addShadow {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.main-content.design:after {
+  content: "";
+  background-image: url(../../assets/images/backgroundI.jpg);
+  background-position: center bottom;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.10;
+}
+
+@media screen and (max-width: 1023px) {
+  .mainC .main-content .description__row__col2 {
+    margin-right: 0;
+    min-width: 100%;
+    width: 100%;
+  }
+}
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+}
+
+@-webkit-keyframes fadeInLeftBig {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-2000px, 0, 0);
+    transform: translate3d(-2000px, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInLeftBig {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-2000px, 0, 0);
+    transform: translate3d(-2000px, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fadeInLeftBig {
+  -webkit-animation-name: fadeInLeftBig;
+  animation-name: fadeInLeftBig;
+}
+
+@-webkit-keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
+@-webkit-keyframes fadeInUpBig {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 2000px, 0);
+    transform: translate3d(0, 2000px, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInUpBig {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 2000px, 0);
+    transform: translate3d(0, 2000px, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
 /*# sourceMappingURL=style.css.map */
