--- a/src/components/Quality/style.scss
+++ b/src/components/Quality/style.scss
@@ -115,13 +115,15 @@ overflow: initial;
   }
 }
 
-
 .quality {
   .description {
     &__row {
       &__col2 {
         &:nth-child(3), &:nth-child(7) {
-          margin-right: 0;
+          margin-right: 0!important;
+        }
+        &:nth-child(6) {
+          margin-right: 5.5%!important;
         }
         &:nth-child(4), &:nth-child(5),&:nth-child(6),&:nth-child(7) {
           min-width: 20.6%!important;
